# Computational_Intelligence

Lab1/: Ex_lab1.ipynb  READme.md  lab1.ipynb  new.ipynb  pyproject.toml
Lab2/: Ex_lab2.ipynb  README.md
lab3/: README.md  lab3.ipynb  lab3_4.ipynb
