[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["AleTola <tola.ale99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
